libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/MYPDA.NSA
DEFINE DATA PARAMETER
1 #VAR (A10)
END-DEFINE
